--- a/index.html
+++ b/index.html
@@ -38,15 +38,19 @@ function openForm() {
         </ul>
     </nav>
 
-    <div class="slider">
-		<div class="load">
-		</div>
-		<div class="content">
-			<div class="principal">
+    <div class="item-container">
+        <div class="img">
+            <img src="images/mattress_1.png" alt="First Mattress" width="400" height="400">
+        </div>
+        <div class="info-box">
+            <div class="description">
+                <h3>This mattress is MEGA FIRM</h3>
+            </div>
+            <div class="price">
 
-			</div>
-		</div>
-	</div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
