--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@ function openForm() {
             <img src="images/mattress_1.png" alt="First Mattress" width="400" height="400">
         </div>
         <div class="info-box">
-            <div class="description">
+            <div class="price">
+                <h3>$69,000</h3>
+            </div>
+            <div class="name">
                 <h3>This mattress is MEGA FIRM</h3>
             </div>
             <div class="price">
