--- a/game.html
+++ b/game.html
@@ -7,8 +7,13 @@
 </head>
 <body>
     <div class="game">
-        <div id="character"></div>
-        <div id="block"></div>
+        <div id="character">
+            <img src = "images/spike.png" width = "60" height = "60">
+
+        </div>
+        <div id="block">
+            <img src = "images/characterImg.png" width = "70" height = "70">
+        </div>
     </div>
     <p>Score: <span id="scoreSpan"></span></p>
 </body>
